--- a/ci/ansible/inventory.sample
+++ b/ci/ansible/inventory.sample
@@ -26,16 +26,30 @@ dbpass="{{ hostvars[groups['databases'][0]].dbpass }}"
 dbname="{{ hostvars[groups['databases'][0]].dbname }}"
 dbhost="{{ groups['databases'][0] }}"
 dburl="postgresql://{{ dbuser }}:{{ dbpass }}@{{ dbhost }}:5432/{{ dbname }}"
+wss_host="{{ groups['socket_servers'][0] }}"
+wss_port="{{ hostvars[groups['socket_servers'][0]].wss_port }}"
+wss_url="ws://{{ wss_host }}:{{ wss_port }}"
 api_port=5000
-ws_port=5000
+
+[socket_servers]
+<add_socket_servers>
+
+[socket_servers:vars]
+server_api_host="{{ groups['servers'][0] }}"
+server_api_port="{{ hostvars[groups['servers'][0]].api_port }}"
+api_url="http://{{ server_api_host }}:{{ server_api_port }}"
+wss_port=2929
 
 [clients]
 <add_client_hosts>
+
+[clients:vars]
+client_port=8080
 
 [workers]
 <add_worker_hosts>
 
 [workers:vars]
-server_host="{{ groups['servers'][0] }}"
-ws_port="{{ hostvars[groups['servers'][0]].ws_port }}"
-ws_url="ws://{{ server_host }}:{{ ws_port }}"
+wss_host="{{ groups['socket_servers'][0] }}"
+wss_port="{{ hostvars[groups['socket_servers'][0]].wss_port }}"
+wss_url="ws://{{ wss_host }}:{{ wss_port }}"
