--- a/ci/ansible/socket-server.yml
+++ b/ci/ansible/socket-server.yml
@@ -9,12 +9,10 @@
   tasks:
     - name: Install System Dependencies
       become: yes
-      apt: name={{ item }} update_cache=yes state=latest
-      with_items:
-        - git
-        - gcc
-        - g++
-        - make
+      apt:
+        update_cache: yes
+        state: latest
+        name: [ 'git', 'gcc', 'g++', 'make' ]
 
     - name: Create {{ appDir }}
       file:
@@ -82,7 +80,7 @@
     - name: Enable and start herbert-socket-server service
       become: yes
       systemd:
-        name: herbert-server
+        name: herbert-socket-server
         state: restarted
         daemon_reload: yes
         enabled: yes
