--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "onoff": "^6.0.1",
     "pg": "^8.5.1",
     "serve-favicon": "^2.5.0",
+    "socket.io": "^4.2.0",
+    "socket.io-client": "^4.2.0",
     "tslib": "^2.1.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
