--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
+    "vue-resize-directive": "^1.2.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
     "ws": "^7.4.3",
