--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "tslib": "^2.1.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-cookies": "^1.7.4",
     "vue-property-decorator": "^9.1.2",
     "vue-resize-directive": "^1.2.0",
     "vue-router": "^3.5.1",
