--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "date-fns-tz": "^1.1.3",
     "express": "^4.17.1",
     "express-promise-router": "^4.0.1",
+    "meross-cloud": "^1.8.1",
     "node-switchbot": "^1.0.0",
     "onoff": "^6.0.1",
     "pg": "^8.5.1",
