--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "automate your horticulture",
   "main": "index.js",
   "engines": {
-    "node": "14.16.1"
+    "node": "v18.16.0",
+    "npm": "9.5.1"
   },
   "scripts": {
     "test": "NODE_ENV=unit_test WSS_URL=ws://localhost:5000 jest",
@@ -32,6 +33,7 @@
   "license": "MIT",
   "author": "Terry Lorber",
   "dependencies": {
+    "@achrinza/node-ipc": "^10.1.7",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
@@ -74,28 +76,28 @@
     "@types/pg": "^8.5.1",
     "@types/serve-favicon": "^2.5.2",
     "@types/ws": "^7.4.4",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^5.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-typescript": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
+    "@vue/eslint-config-prettier": "^7.1.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
     "concurrently": "^5.3.0",
     "css-loader": "^5.0.2",
-    "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint": "^8.39.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.11.0",
     "html-webpack-plugin": "^4.0.0",
-    "jest": "^27.0.4",
-    "node-sass": "^6.0.1",
-    "prettier": "^1.19.1",
+    "jest": "^29.5.0",
+    "node-sass": "^8.0.0",
+    "prettier": "^2.8.8",
     "sass-loader": "^10.1.1",
-    "ts-jest": "^27.0.7",
+    "ts-jest": "^29.1.0",
     "tsc-watch": "^4.4.0",
-    "typescript": "^4.3.4",
-    "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.46.0"
+    "typescript": "^5.0.4",
+    "vue-template-compiler": "^2.7.14",
+    "webpack": "^5.81.0"
   }
 }
