--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "9.5.1"
   },
   "scripts": {
-    "test": "NODE_ENV=unit_test WSS_URL=ws://localhost:5000 jest",
+    "test": "NODE_OPTIONS=--experimental-vm-modules NODE_ENV=unit_test WSS_URL=ws://localhost:5000 jest",
     "clean": "rm -rf dist",
     "lint": "vue-cli-service lint",
     "serve:client": "vue-cli-service serve src/client/main.ts",
@@ -38,7 +38,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "@types/node": "^14.14.41",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "body-parser": "^1.19.0",
     "bulma": "^0.9.2",
     "chart.js": "^2.9.4",
@@ -51,7 +51,9 @@
     "date-fns-tz": "^1.1.3",
     "express": "^4.17.1",
     "express-promise-router": "^4.0.1",
+    "md5": "^2.3.0",
     "meross-cloud": "^1.8.1",
+    "node-fetch": "^2.7.0",
     "node-switchbot": "^1.0.0",
     "onoff": "^6.0.1",
     "pg": "^8.5.1",
